[package]
name = "wsprrs"
version = "0.1.0"
edition = "2021"
authors = ["Peter Grace <pete.grace@gmail.com>"]

[dependencies]
anyhow        = "1"
bytes         = "1"
ctrlc         = { version = "3.4.5", features = ["termination"] }
dotenvy       = "0.15"
indicatif     = "0.17"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
socket2       = "0.5"
tempfile      = "3"
thiserror     = "2"
tokio         = { version = "1", features = [
    "rt-multi-thread", "macros", "time",
    "net", "process", "fs", "sync",
] }
tracing          = "0.1"
tracing-log      = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
console-subscriber = "0.4"
zerocopy         = { version = "0.8", features = ["derive"] }
